# hotel-reservation-prediction

./: .gitignore  Dockerfile  Jenkinsfile  pyproject.toml  requirements.txt
artifacts/models/: lgbm_model.pkl
artifacts/processed/: processed_test.csv
config/: path_config.py
config/.ipynb_checkpoints/: config-checkpoint.yaml  path_config-checkpoint.py
notebook/: notebook.ipynb
pipeline/: training_pipeline.py
src/: custom_exception.py  data_ingestion.py  data_preprocessing.py  logger.py  model_training.py
src/.ipynb_checkpoints/: custom_exception-checkpoint.py
templates/: index.html
utils/: commmon_functions.py
